[gd_scene load_steps=9 format=3 uid="uid://1g3xfajskdtr"]

[ext_resource type="Theme" uid="uid://chu8dr8oafu2f" path="res://assets/ui/ui_theme.tres" id="1_bbnub"]
[ext_resource type="Script" path="res://scenes/game_over_menu.gd" id="2_guksp"]
[ext_resource type="Texture2D" uid="uid://bjf2wgs2accqm" path="res://assets/ui/medals/medal_hole.png" id="2_t0ues"]
[ext_resource type="Texture2D" uid="uid://cusro2vbuj0o" path="res://assets/ui/medals/bronze_3.png" id="3_fhauw"]
[ext_resource type="Texture2D" uid="uid://baq7m3ycwu4eq" path="res://assets/ui/buttons/retry_icon.png" id="4_0mtcn"]
[ext_resource type="Texture2D" uid="uid://cd8fgwrt41qaw" path="res://assets/ui/buttons/share_icon.png" id="5_e861r"]
[ext_resource type="Texture2D" uid="uid://gnaivebymrj3" path="res://assets/ui/buttons/home_icon.png" id="6_bim16"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8qcfu"]

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -639.0
offset_right = -288.0
offset_bottom = -442.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
theme = ExtResource("1_bbnub")
script = ExtResource("2_guksp")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -0.2
offset_bottom = -0.199997
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -33.5
offset_right = 41.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Results" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MedalColumn" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Results"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Results/MedalColumn"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Medal"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Results/MedalColumn"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Results/MedalColumn"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="MedalHole" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Results/MedalColumn/CenterContainer"]
layout_mode = 2
texture = ExtResource("2_t0ues")

[node name="Medal" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Results/MedalColumn/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_fhauw")
stretch_mode = 2

[node name="ScoreColumn" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Results"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Results/ScoreColumn"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Score
"
horizontal_alignment = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Results/ScoreColumn"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="Score" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Results/ScoreColumn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.243137, 0.207843, 0.27451, 1)
theme_override_font_sizes/font_size = 16
text = "37
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label2" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Results/ScoreColumn"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Best"
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Results/ScoreColumn"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="Best" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Results/ScoreColumn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0.243137, 0.207843, 0.27451, 1)
theme_override_font_sizes/font_size = 16
text = "61
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Menu" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
text = "Retry"
icon = ExtResource("4_0mtcn")
icon_alignment = 2

[node name="VSeparator" type="VSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Menu"]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxEmpty_8qcfu")

[node name="ShareButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
icon = ExtResource("5_e861r")

[node name="HomeButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
icon = ExtResource("6_bim16")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
